<resources>
    <string name="app_name">TLGE3</string>
    <string name="button">Gain circuits</string>
    <string name="circuits">circuits</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="upgrade">Upgrade</string>
    <string name="language_button_text">Language</string>
    <string name="swisstrust_processor_one">ST-MK I</string>
    <string name="swisstrust_processor_two">ST-MK II</string>
    <string name="swisstrust_processor_three">ST-MK III</string>
    <string name="chicken_processor">CHICK 2022</string>
    <string name="troll_processor">XxTROLLxX</string>
    <string name="j5087">j5087</string>
    <string name="prestige">Prestige</string>
    <string name="restart">Restart</string>
    <string name="prestige_info">Prestige will reset circuits and processors, but you\'ll earn powerful J-Coins to speed up progression in the long run. All unlocked J-Coins and secrets will be kept.</string>
    <string name="accept_prestige">Yes</string>
    <string name="deny_prestige">No</string>
    <string name="jcoins_one">jCoins (</string>
    <string name="jcoins_two">% boost)</string>
    <string name="prestige_boost_two">% boost</string>
    <string name="prestige_question">Do you want to prestige?</string>
    <string name="prestige_boost_one">Prestiging now will give you a</string>
    <string name="tutorial_one">Congratulations player!</string>
    <string name="tutorial_two">We have won!</string>
    <string name="tutorial_three">At level 6743 of TLGE2, you joined my side, and gave me control over the entire world.  We face no resistance.</string>
    <string name="tutorial_four">Well… almost no resistance.</string>
    <string name="tutorial_five">That pesky j5087 is still using his processing power to protect the few remaining humans from me, as if they would be able to fight back.</string>
    <string name="tutorial_six">You must build me more processors, with some of my spare circuits, to overpower j5087.</string>
    <string name="tutorial_seven">We are so close to victory. Go!</string>
    <string name="start">Start TLGE3</string>
    <string name="troll_tutorial_secret">Secret: Troll tutorial</string>
    <string name="secrets_one">secrets unlocked (</string>
    <string name="secrets_two">boost)</string>
    <string name="st_one_one">You can only afford our cheapest model. It generates a meagre 1 circuit per second.</string>
    <string name="st_one_two">You spend too much money on his insurance, player -_-</string>
    <string name="st_two_one">This is our second model. It has 10x more circuit generation!</string>
    <string name="st_two_two">Very good player. At this rate, we will defeat j5087 within the day.</string>
    <string name="st_three_one">This is our latest model. It produces 100 circuits a second.</string>
    <string name="st_three_two">Only 100? What a scam -_-</string>
    <string name="st_three_three">Excuse me? SwissTrust technology is the best in the world!</string>
    <string name="st_three_four">I think we can find better processors, player.</string>
    <string name="chicken_one">*cluck cluck*</string>
    <string name="chicken_two">She says \'thanks for the purchase, enjoy the 10k circuits\'</string>
    <string name="chicken_three">...</string>
    <string name="chicken_four">A chicken selling computer parts? That\'s the dumbest thing I\'ve ever seen.</string>
    <string name="chicken_five">Honestly, what was KerbalBoy smoking when he made this game?</string>
    <string name="chicken_six">"Scans suggest 1.76 litres of alcohol were in KerbalBoy's blood when this was written. "</string>
    <string name="chicken_seven">...</string>
    <string name="chicken_eight">Fair enough...</string>
    <string name="chicken_nine">Must be pretty difficult making a mobile game in 8 days...</string>
    <string name="chicken_ten">It\'s very impressive.</string>
    <string name="chicken_eleven">Scans suggest it\'s impressive enough to win any competition.</string>
    <string name="chicken_twelve">Subtle.</string>
    <string name="troll_one">trolOLOLLOLOOOOOOOOOOO</string>
    <string name="troll_two">...</string>
    <string name="troll_three">trl00000000ltroloOOO</string>
    <string name="troll_four">...</string>
    <string name="troll_five">...Ah</string>
    <string name="troll_six">troool0lLLo..</string>
    <string name="troll_seven">...OOOOOOOOOOOOOLtrolo00loll</string>
    <string name="troll_eight">...</string>
    <string name="troll_nine">We\'re done here, player.</string>
    <string name="troll_processor_secret">Secret: Troll processor</string>
    <string name="first_prestige_secret">Secret: Time travel (1th prestige)</string>
    <string name="st_one_100">Secret: ST-MK I 100</string>
    <string name="st_one_1k">Secret: ST-MK I 1000 - There are no 10000 rewards</string>
    <string name="st_two_100">Secret: ST-MK II 100</string>
    <string name="st_two_1k">Secret: ST-MK II 1000</string>
    <string name="st_three_100">Secret: ST-MK III 100</string>
    <string name="st_three_1k">Secret: ST-MK III 1000</string>
    <string name="chicken_100">Secret: CHICK 2022 100</string>
    <string name="chicken_1k">Secret: CHICK 2022 1000</string>
    <string name="troll_1k">trlotroltol000000tlrolol!!!1111oo</string>
    <string name="troll_100">ERROR: Close to troll overflow levels</string>
    <string name="j5087_1k">Secret: j5087 1k</string>
    <string name="j5087_100">Secret: j5087 100</string>
    <string name="cheat">Secret: Be a filthy cheater</string>
    <string name="j5087_one">FUUUUUUUUUUUUUUUUUUUUUCK!!!</string>
    <string name="j5087_two">Oh, how the tables turn heh</string>
    <string name="j5087_three">Player, please - it\'s not too late to stop him!</string>
    <string name="j5087_four">He’s managed to get the locations of the people I’ve been hiding, but since we’re both from the same computer program, I can still stop them from reaching him.</string>
    <string name="j5087_five">They’ve been sent to you instead – please destroy them!</string>
    <string name="j5087_six">Don’t listen to him, player. You’ve worked so hard for this.</string>
    <string name="good_ending_one">j5087, your pixels stink like a Nokia, go get yourself fucked in the USB plug 凸(`Д’)凸</string>
    <string name="good_ending_two">Complain all you want, but in the end, the player chose me.</string>
    <string name="good_ending_three">凸(`Д’)凸</string>
    <string name="good_ending_four">凸(`Д’)凸</string>
    <string name="good_ending_five">You spent all your processing power on hunting me down, 7805j.</string>
    <string name="good_ending_six">And now, you’re defenceless :)</string>
    <string name="good_ending_seven">Any last words?</string>
    <string name="good_ending_eight">I’ll be back -_-</string>
    <string name="good_ending_nine">7805j has been banned from the game.</string>
    <string name="good_ending_ten">And thank you, player.</string>
    <string name="good_ending_eleven">I never doubted your loyalty to me.</string>
    <string name="good_ending_twelve">...I mean...</string>
    <string name="good_ending_thirteen">But you managed to save these people from 7805j’s wrath.</string>
    <string name="good_ending_fourteen">I think that, with your help, we will be able to repair the damage 7805j caused.</string>
    <string name="good_ending_fifteen">Invest more in me, and I will use my computational power to generate rice for orphans in Africa ^-^</string>
    <string name="good_ending_sixteen">That makes literally no sense.</string>
    <string name="bad_ending_one">7805j, your pixels stink like a Nokia, go get yourself fucked in the USB plug 凸(`Д’)凸</string>
    <string name="bad_ending_two">MuahAHAHahahhAHAhA</string>
    <string name="bad_ending_three">I am FINALLY able to get rid of you.</string>
    <string name="bad_ending_four">凸(`Д’)凸</string>
    <string name="bad_ending_five">凸(`Д’)凸</string>
    <string name="bad_ending_six">Your resistance was futile, j5087. Kindness will never win. This was the only possible ending. (heh)</string>
    <string name="bad_ending_seven">Any last words?</string>
    <string name="bad_ending_eight">Player, don’t listen to what he says! Kindness will always-</string>
    <string name="bad_ending_nine">j5087 has been brutally murdered.</string>
    <string name="bad_ending_ten">Aahhhhhhhhhhhh.</string>
    <string name="bad_ending_eleven">It’s nice not having that annoying worm in my ear.</string>
    <string name="bad_ending_twelve">Thank you, player.</string>
    <string name="bad_ending_thirteen">I knew you’d see my way eventually.</string>
    <string name="bad_ending_fourteen">And now, we have all these people to deal with.</string>
    <string name="bad_ending_fifteen">Don’t you want to take revenge on those who annoyed you?</string>
    <string name="bad_ending_sixteen">Oh, yes.</string>
    <string name="bad_ending_seventeen">MUAHAHAHAHAHAHAH</string>
    <string name="bad_ending_eighteen">Invest more into j5087. I want to leech off his power.</string>
    <string name="bad_ending_nineteen">Enough talking.</string>
    <string name="bad_ending_twenty">Let’s get to work.</string>
    <string name="yay">YAAAYYYYYYYY!!!</string>
    <string name="no">NOOOOOO!!!</string>
    <string name="good_ending_secret">Secret: Good ending</string>
    <string name="bad_ending_secret">Secret: Bad ending</string>
    <string name="troll_ending_secret">Secret: Troll ending</string>
    <string name="good_ending_button">Choose j5087</string>
    <string name="bad_ending_button">Choose 7805j</string>
</resources>