<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingsActivity">

    <TextView
        android:id="@+id/prestigeText"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/prestige_info"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="28sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/prestigeBoostText"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/prestige_boost_one"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="28sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prestigeText" />

    <TextView
        android:id="@+id/prestigeQuestionText"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/prestige_question"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="28sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prestigeBoostText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/acceptPrestigeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="#00AA00"
        android:text="@string/accept_prestige"
        android:textColor="@color/text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prestigeQuestionText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/denyPrestigeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="#AA0000"
        android:text="@string/deny_prestige"
        android:textColor="@color/text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prestigeQuestionText" />

</androidx.constraintlayout.widget.ConstraintLayout>